<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@color/colorTheme">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingRight="55dp"
        android:paddingLeft="55dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Title"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="40sp"
            android:layout_gravity="center"
            android:fontFamily="serif-monospace"
            android:layout_marginTop="100dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tagline"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="15sp"/>
        <EditText
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/entername"
            android:inputType="textPersonName"
            android:textColorHint="@color/white"
            android:textStyle="italic"
            android:id="@+id/name"/>
        <EditText
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/enteremail"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/white"
            android:textStyle="italic"
            android:id="@+id/email"/>
        <EditText
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/enterpassword"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            android:textStyle="italic"
            android:id="@+id/password"/>
        <EditText
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/entermobile"
            android:inputType="phone"
            android:textColorHint="@color/white"
            android:textStyle="italic"
            android:id="@+id/mobile"/>
        <Button
            android:layout_marginTop="50dp"
            android:layout_width="150dp"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:background="@drawable/button_style"
            android:layout_gravity="center"
            android:text="@string/signup"
            android:textColor="@color/colorTheme"
            android:textStyle="bold"
            android:id="@+id/signup"
            />
    </LinearLayout>



</android.support.constraint.ConstraintLayout>