<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateListActivity"
    android:background="@color/colorTheme">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingRight="55dp"
        android:paddingLeft="55dp">
        <EditText
            android:gravity="center"
            android:layout_marginTop="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/entermoviename"
            android:inputType="text"
            android:textColorHint="@color/white"
            android:textStyle="italic"
            android:id="@+id/moviename"/>
        <EditText
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/entergenre"
            android:inputType="text"
            android:textColorHint="@color/white"
            android:textStyle="italic"
            android:id="@+id/genre"/>
        <EditText
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/enterdirector"
            android:inputType="phone"
            android:textColorHint="@color/white"
            android:textStyle="italic"
            android:id="@+id/director"/>
        <Button
            android:layout_marginTop="50dp"
            android:layout_width="150dp"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:background="@drawable/button_style"
            android:layout_gravity="center"
            android:text="@string/add"
            android:textColor="@color/colorTheme"
            android:textStyle="bold"
            android:id="@+id/signup"
            />
    </LinearLayout>



</android.support.constraint.ConstraintLayout>